@@ -1,4 +1,11 @@
-﻿shmuel 01.01.2015 20:34:10 +0200 - build 464
+﻿shmuel 03.01.2015 21:20:32 +0200 - build 465
+
+1. eval(S,2) снова, как это было до перевода макросистемы на Lua, запускает на исполнение
+   соответствующий макрос, а не просто вызывает его функцию 'action'.
+
+2. Рефакторинг.
+
+shmuel 01.01.2015 20:34:10 +0200 - build 464
 
 1. Рефакторинг.
 
